--- a/ios/module.xcconfig
+++ b/ios/module.xcconfig
@@ -25,4 +25,4 @@
 //
 // IMPORTANT NOTE: always use $(inherited) in your overrides
 // 
-OTHER_LDFLAGS=$(inherited) -liconv
+OTHER_LDFLAGS=$(inherited) -lstdc++.6.0.9 -liconv
