--- a/ios/titanium.xcconfig
+++ b/ios/titanium.xcconfig
@@ -10,10 +10,9 @@ TITANIUM_SDK_VERSION = 3.4.1.GA
 // 
 // THESE SHOULD BE OK GENERALLY AS-IS
 //
-TITANIUM_SDK = /Library/Application Support/Titanium/mobilesdk/osx/$(TITANIUM_SDK_VERSION)
+TITANIUM_SDK = ~/Library/Application Support/Titanium/mobilesdk/osx/$(TITANIUM_SDK_VERSION)
 TITANIUM_BASE_SDK = "$(TITANIUM_SDK)/iphone/include"
 TITANIUM_BASE_SDK2 = "$(TITANIUM_SDK)/iphone/include/TiCore"
 HEADER_SEARCH_PATHS= $(TITANIUM_BASE_SDK) $(TITANIUM_BASE_SDK2)
-
 
 
