--- a/.travis.yml
+++ b/.travis.yml
@@ -1,19 +1,17 @@
 language: objective-c
 osx_image: xcode7.1
 env:
- global:
-   - "ARTIFACTS_AWS_REGION=us-east-1"
-   - "ARTIFACTS_S3_BUCKET=builds.appcelerator.com"
-   - "MODULE_NAME=ti.barcode"
+global:
+    - "MODULE_NAME=ti.barcode"
 before_install:
     - MODULE_ROOT=$PWD
 install:
     - cd $MODULE_ROOT
-    - curl -o install.sh https://raw.githubusercontent.com/appcelerator-modules/ci/master/travis/install.sh #change this to appcelerator-modules once PR has been merged
-    - source install.sh -s "--branch 5_1_X"
+    - curl -o install.sh https://raw.githubusercontent.com/appcelerator-modules/ci/master/travis/install.sh
+    - source install.sh -a 22 -s "--branch 5_1_X"
 script:
     - curl -o script.sh https://raw.githubusercontent.com/appcelerator-modules/ci/master/travis/script.sh
     - source script.sh
 after_success: # and this only on success
-  - curl -o deploy.sh https://raw.githubusercontent.com/appcelerator-modules/ci/master/travis/deploy.sh
-  - source deploy.sh
+    - curl -o deploy.sh https://raw.githubusercontent.com/appcelerator-modules/ci/master/travis/deploy.sh
+    - source deploy.sh
