--- a/package.json
+++ b/package.json
@@ -34,13 +34,9 @@
     "karma": "^4.0.0",
     "karma-jasmine": "^2.0.1",
     "karma-junit-reporter": "^1.2.0",
-    "karma-mocha": "^1.3.0",
     "karma-mocha-reporter": "^2.2.5",
     "karma-titanium-launcher": "^0.5.6",
-    "karma-webpack": "^4.0.0-rc.6",
-    "mocha": "^5.2.0",
-    "socket.io": "^2.2.0",
-    "webpack": "^4.29.0"
+    "socket.io": "^2.2.0"
   },
   "dependencies": {}
 }
