--- a/apidoc/BarcodeModule.yml
+++ b/apidoc/BarcodeModule.yml
@@ -36,6 +36,8 @@ properties:
     permission: read-only
     since: "3.1.0"
     platforms: [android, iphone, ipad]
+    deprecated:
+        since: "5.0.0"
 
   - name: FORMAT_QR_CODE
     summary: |
