style: fix doc lint issue

--- a/apidoc/BarcodeModule.yml
+++ b/apidoc/BarcodeModule.yml
@@ -400,7 +400,7 @@ events:
     properties:
       - name: format
         summary: The format of the barcode. Reported with a value of one of the Modules.Barcode.FORMAT_* constant if matching a known format. Otehrwise, may report a string value.
-        type: String,Number
+        type: [String,Number]
         platforms: [android, iphone, ipad]
             
       - name: result
