--- a/package.json
+++ b/package.json
@@ -45,6 +45,7 @@
     "eslint": "^5.10.0",
     "eslint-config-axway": "^4.1.1",
     "eslint-plugin-jasmine": "^2.10.1",
+    "fs-extra": "^8.1.0",
     "husky": "^3.0.8",
     "jasmine-core": "^3.3.0",
     "karma": "^4.0.0",
