--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@titanium/ti.barcode",
+  "name": "@titanium-sdk/ti.barcode",
   "version": "5.0.0",
   "description": "Lets you process 1D/2D barcodes",
   "scripts": {
