--- a/test/unit/specs/.eslintrc
+++ b/test/unit/specs/.eslintrc
@@ -1,6 +1,10 @@
 {
   "extends": [ "axway/env-titanium", "plugin:jasmine/recommended"],
   "plugins": [ "jasmine" ],
+  "env": {
+    "node": true,
+    "jasmine": true
+  },
   "parserOptions": {
     "ecmaVersion": 2015,
     "sourceType": "script"
