--- a/package.json
+++ b/package.json
@@ -8,7 +8,7 @@
     "format:android": "npm run lint:android -- --fix",
     "format:ios": "npm run lint:ios -- --fix",
     "format:js": "npm run lint:js -- --fix",
-    "lint": "npm run lint:android && npm run lint:ios && npm run lint:docs",
+    "lint": "npm run lint:android && npm run lint:ios && npm run lint:js && npm run lint:docs",
     "lint:android": "clang-format-lint android/src/ti/**/*.java",
     "lint:docs": "tdoc-validate -w Titanium.Module,Titanium.UI.View,Titanium.Blob,Titanium.Buffer apidoc",
     "lint:ios": "clang-format-lint ios/**/*.m ios/**/*.h",
