docs: update the yml file

--- a/apidoc/BarcodeModule.yml
+++ b/apidoc/BarcodeModule.yml
@@ -480,6 +480,7 @@ properties:
     optional: true
     default: true
     platforms: [android, iphone, ipad]
+    since: {android: "5.0.3"}
 
   - name: showRectangle
     summary: |
