--- a/.github/dependabot.yml
+++ b/.github/dependabot.yml
@@ -3,33 +3,9 @@ updates:
 - package-ecosystem: npm
   directory: "/"
   schedule:
-    interval: daily
-    time: "11:00"
+    interval: weekly
   open-pull-requests-limit: 10
   ignore:
-  - dependency-name: y18n
-    versions:
-    - 4.0.1
-    - 4.0.2
-  - dependency-name: eslint
-    versions:
-    - 7.23.0
   - dependency-name: karma
     versions:
-    - 6.0.3
-    - 6.0.4
-    - 6.1.0
-    - 6.1.1
-    - 6.1.2
-    - 6.2.0
-    - 6.3.0
-    - 6.3.1
-  - dependency-name: jasmine-core
-    versions:
-    - 3.7.0
-  - dependency-name: "@commitlint/cli"
-    versions:
-    - 12.0.1
-  - dependency-name: husky
-    versions:
-    - 4.3.8
+    - ">=6.0.0"
