--- a/package.json
+++ b/package.json
@@ -34,27 +34,27 @@
     ]
   },
   "devDependencies": {
-    "@commitlint/cli": "^12.0.0",
-    "@commitlint/config-conventional": "^12.0.0",
+    "@commitlint/cli": "^17.0.3",
+    "@commitlint/config-conventional": "^17.0.3",
     "@seadub/clang-format-lint": "0.0.2",
     "@seadub/danger-plugin-dependencies": "^1.0.0",
-    "@seadub/danger-plugin-junit": "^0.2.0",
-    "clang-format": "^1.4.0",
-    "commitizen": "^4.2.1",
-    "danger": "^10.4.0",
-    "eslint": "^7.9.0",
-    "eslint-config-axway": "^6.0.0",
-    "eslint-plugin-jasmine": "^4.1.1",
-    "fs-extra": "^10.0.0",
-    "husky": "^5.0.9",
-    "jasmine-core": "^3.6.0",
-    "karma": "^5.2.2",
-    "karma-jasmine": "^4.0.1",
+    "@seadub/danger-plugin-junit": "^0.3.0",
+    "clang-format": "^1.8.0",
+    "commitizen": "^4.2.5",
+    "danger": "^11.1.1",
+    "eslint": "^8.21.0",
+    "eslint-config-axway": "^7.0.1",
+    "eslint-plugin-jasmine": "^4.1.3",
+    "fs-extra": "^10.1.0",
+    "husky": "^8.0.1",
+    "jasmine-core": "^4.3.0",
+    "karma": "^6.4.0",
+    "karma-jasmine": "^5.1.0",
     "karma-junit-reporter": "^2.0.1",
     "karma-mocha-reporter": "^2.2.5",
-    "karma-titanium-launcher": "^0.8.1",
-    "lint-staged": "^11.0.0",
-    "titanium-docgen": "^4.7.0"
+    "karma-titanium-launcher": "^0.9.0-1",
+    "lint-staged": "^13.0.3",
+    "titanium-docgen": "^4.10.3"
   },
   "husky": {
     "hooks": {
