--- a/.github/workflows/js.yml
+++ b/.github/workflows/js.yml
@@ -1,5 +1,5 @@
 name: JavaScript Lint
-on: 
+on:
   push:
     paths:
     - '**.js'
@@ -11,22 +11,22 @@ on:
     - '**.json'
     - '**.eslint*'
   workflow_dispatch:
-  
+
 jobs:
   js:
     runs-on: ubuntu-latest
     name: JavaScript
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
-    - name: Use Node.js 12.x
-      uses: actions/setup-node@v1
+    - name: Use Node.js
+      uses: actions/setup-node@v4
       with:
-        node-version: '12.x'
+        node-version: '18.x'
 
     - name: Cache Node.js modules
       id: node-cache
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: node_modules
         key: ${{ runner.OS }}-node-modules-${{ hashFiles('package-lock.json') }}
