--- a/.github/workflows/android.yml
+++ b/.github/workflows/android.yml
@@ -1,5 +1,5 @@
 name: Android Build
-on: 
+on:
   push:
     paths-ignore:
     - 'ios/**'
@@ -17,19 +17,19 @@ jobs:
     env:
       CCACHE_DIR: ${{ github.workspace }}/.ccache
       USE_CCACHE: 1
-      SDK_VERSION: 9.3.2.GA
+      SDK_VERSION: 12.3.0.GA
       MODULE_ID: ti.barcode
     steps:
-    - uses: actions/checkout@v2
+    - uses: actions/checkout@v4
 
-    - name: Use Node.js 12.x
-      uses: actions/setup-node@v1
+    - name: Use Node.js
+      uses: actions/setup-node@v4
       with:
-        node-version: '12.x'
+        node-version: '18.x'
 
     - name: Cache Node.js modules
       id: node-cache
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: node_modules
         key: ${{ runner.OS }}-node-modules-${{ hashFiles('package-lock.json') }}
@@ -42,7 +42,7 @@ jobs:
       if: steps.node-cache.outputs.cache-hit != 'true'
 
     - name: Cache Gradle packages
-      uses: actions/cache@v2
+      uses: actions/cache@v4
       with:
         path: |
           ~/.gradle/caches
